--- a/BlogPhone/Pages/admin/users.cshtml
+++ b/BlogPhone/Pages/admin/users.cshtml
@@ -12,7 +12,7 @@
     <meta name="keywords" content="Список пользователей">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Страница 1</title>
+    <title>Список пользователей</title>
     <link rel="stylesheet" href="~/css/nicepage.css" media="screen">
     <link rel="stylesheet" href="~/css/list.css" media="screen">
     <script class="u-script" type="text/javascript" src="~/js/jquery.js" defer=""></script>
@@ -76,7 +76,7 @@
     <section class="u-clearfix u-section-1" id="sec-f51a">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-1">Список пользователей</h1>
-        <div> @*class="u-clearfix u-group-elements u-group-elements-1"*@
+        <div>
 
             @if(@Model.Users is not null)
             {
