--- a/BlogPhone/Pages/arts/view.cshtml
+++ b/BlogPhone/Pages/arts/view.cshtml
@@ -67,21 +67,19 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-section-1" id="sec-80a0">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1"><!--post_details--><!--post_details_options_json--><!--{"source":""}--><!--/post_details_options_json--><!--blog_post-->
+      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <div class="u-container-style u-expanded-width u-post-details u-post-details-1">
-          <div class="u-container-layout u-valign-middle u-container-layout-1"><!--blog_post_image-->
-            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="@Model.GetImageURLFromBytesArray(Model.Article?.ImageData)"><!--/blog_post_image--><!--blog_post_header-->
-            <h2 class="u-blog-control u-text u-text-1">@Model.Article?.Label</h2><!--/blog_post_header--><!--blog_post_metadata-->
-            <div class="u-blog-control u-metadata u-metadata-1"><!--blog_post_metadata_date-->
-              <span class="u-meta-date u-meta-icon">@Model.Article?.PublishDate</span><!--/blog_post_metadata_date--><!--blog_post_metadata_category-->
-              <!--/blog_post_metadata_category--><!--blog_post_metadata_comments-->
-              <!--/blog_post_metadata_comments-->
-            </div><!--/blog_post_metadata--><!--blog_post_content-->
-            <div class="u-align-justify u-blog-control u-post-content u-text u-text-2 fr-view">
-  @Model.Article?.AricleText
-  </div><!--/blog_post_content-->
-          </div>
-        </div><!--/blog_post--><!--/post_details-->
+          <div class="u-container-layout u-valign-middle u-container-layout-1">
+            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="@ImageWorking.GetImageURLFromBytesArray(Model.Article?.ImageData)">
+            <h2 class="u-blog-control u-text u-text-1">@Model.Article?.Label</h2>
+                <div class="u-blog-control u-metadata u-metadata-1">
+                  <span class="u-meta-date u-meta-icon">@Model.Article?.PublishDate</span>
+                </div>
+                <div class="u-align-justify u-blog-control u-post-content u-text u-text-2 fr-view">
+                    @Model.Article?.ArticleText
+                </div>
+            </div>
+        </div>
       </div>
     </section>
     
