--- a/BlogPhone/Pages/Admin/Heads.cshtml
+++ b/BlogPhone/Pages/Admin/Heads.cshtml
@@ -12,7 +12,7 @@
     <meta name="keywords" content="Заголовок 6-го поста, Заголовок 5-го поста, Заголовок 4-го поста">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Главная</title>
+    <title>Руководители</title>
     <link rel="stylesheet" href="~/css/nicepage.css" media="screen">
 <link rel="stylesheet" href="~/css/Index.css" media="screen">
     <script class="u-script" type="text/javascript" src="~/js/jquery.js" defer=""></script>
