--- a/BlogPhone/Pages/admin/userBan.cshtml
+++ b/BlogPhone/Pages/admin/userBan.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id}"
 @model BlogPhone.Pages.admin.userBanModel
 @{
-    ViewData["Title"] = "user ban";
+    ViewData["Title"] = "Забанить пользователя";
 }
 
 <form method="post" asp-antiforgery="true">
