--- a/BlogPhone/Pages/admin/userChange.cshtml
+++ b/BlogPhone/Pages/admin/userChange.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id}"
 @model BlogPhone.Pages.admin.userChangeModel
 @{
-    ViewData["Title"] = "user change";
+    ViewData["Title"] = "Изменить пользователя";
 }
 
 <h1>Изменение личного кабинета пользователя</h1>
