--- a/BlogPhone/Pages/Office/User.cshtml
+++ b/BlogPhone/Pages/Office/User.cshtml
@@ -7,6 +7,7 @@
 <div style="text-align:center; margin-top:70px">
     <h1 style="text-align:center">Личный Кабинет (account id = @Model.SiteUser!.Id)</h1>
     <h3 style="text-align:center">Имя: @Model.SiteUser!.Name</h3>
+    <h3 style="text-align:center; color:limegreen">Счёт: @Model.SiteUser!.Money рублей</h3>
     <h3 style="text-align:center; color:gray">Статус: @Model.SiteUser!.Role</h3>
     <h3 style="text-align:center">Почта: @Model.SiteUser!.Email</h3>
     <h3 style="text-align:center">Пароль: @Model.SiteUser!.Password</h3>
