--- a/BlogPhone/Pages/rates.cshtml
+++ b/BlogPhone/Pages/rates.cshtml
@@ -107,45 +107,45 @@ else
               <div class="u-align-center u-container-style u-layout-cell u-left-cell u-palette-1-light-2 u-radius-20 u-shape-round u-size-15-lg u-size-15-xl u-size-30-md u-size-30-sm u-size-60-xs u-layout-cell-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
                 <div class="u-container-layout u-valign-top u-container-layout-1">
                   <h5 class="u-text u-text-default u-text-palette-1-dark-1 u-text-4">User</h5>
-                  <h2 class="u-text u-text-default u-text-palette-1-dark-1 u-text-5">0₽</h2>
+                  <h2 class="u-text u-text-default u-text-palette-1-dark-1 u-text-5">@AccessChecker.USER_COST ₽</h2>
                   <p class="u-text u-text-default u-text-palette-1-dark-1 u-text-6">/МЕСЯЦ</p>
                   <div class="u-border-2 u-border-white u-line u-line-horizontal u-line-1"></div>
                   <p class="u-text u-text-palette-1-dark-2 u-text-7">Без чата<br>Без поддержки<br>Без базы данных<br>Без прав управления
                   </p>
-                  <a href="https://nicepage.com/k/aesthetic-website-templates" class="u-active-palette-1-light-3 u-btn u-btn-round u-button-style u-hover-palette-1-light-3 u-radius-50 u-text-palette-3-dark-1 u-white u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">Выбрать</a>
+                  <a asp-page="/store/buyRole" asp-route-role="user" class="u-active-palette-1-light-3 u-btn u-btn-round u-button-style u-hover-palette-1-light-3 u-radius-50 u-text-palette-3-dark-1 u-white u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">Выбрать</a>
                 </div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-palette-1-light-2 u-radius-20 u-shape-round u-size-15-lg u-size-15-xl u-size-30-md u-size-30-sm u-size-60-xs u-layout-cell-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
                 <div class="u-container-layout u-valign-top u-container-layout-2">
                   <h5 class="u-text u-text-default u-text-palette-1-dark-1 u-text-8">Standart</h5>
-                  <h2 class="u-text u-text-default u-text-palette-1-dark-1 u-text-9">499₽</h2>
+                  <h2 class="u-text u-text-default u-text-palette-1-dark-1 u-text-9">@AccessChecker.STANDART_COST ₽</h2>
                   <p class="u-text u-text-default u-text-palette-1-dark-1 u-text-10"> /МЕСЯЦ</p>
                   <div class="u-border-2 u-border-white u-line u-line-horizontal u-line-2"></div>
                   <p class="u-text u-text-palette-1-dark-2 u-text-11">Есть общий чат<br>Без поддержки&nbsp;<br>Есть базы данных<br>Без прав упраления
                   </p>
-                  <a href="https://nicepage.com/k/consulting-website-templates" class="u-active-palette-1-light-3 u-btn u-btn-round u-button-style u-hover-palette-1-light-3 u-radius-50 u-text-palette-3-dark-1 u-white u-btn-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">выбрать</a>
+                  <a asp-page="/store/buyRole" asp-route-role="standart" class="u-active-palette-1-light-3 u-btn u-btn-round u-button-style u-hover-palette-1-light-3 u-radius-50 u-text-palette-3-dark-1 u-white u-btn-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">выбрать</a>
                 </div>
               </div>
               <div class="u-align-center u-container-style u-gradient u-layout-cell u-size-15-lg u-size-15-xl u-size-30-md u-size-30-sm u-size-60-xs u-layout-cell-3">
                 <div class="u-container-layout u-valign-top u-container-layout-3">
                   <h5 class="u-text u-text-default u-text-palette-3-dark-1 u-text-12">Moder</h5>
-                  <h2 class="u-text u-text-default u-text-palette-3-dark-1 u-text-13">999₽</h2>
+                  <h2 class="u-text u-text-default u-text-palette-3-dark-1 u-text-13">@AccessChecker.MODER_COST ₽</h2>
                   <p class="u-text u-text-default u-text-palette-3-dark-1 u-text-14"> /МЕСЯЦ</p>
                   <div class="u-border-2 u-border-white u-line u-line-horizontal u-line-3"></div>
                   <p class="u-text u-text-palette-1-dark-2 u-text-15"> Есть общий чат<br>Есть поддержка<br>Есть базы данных<br>Модератор
                   </p>
-                  <a href="https://nicepage.com/wordpress-themes" class="u-active-palette-1-light-3 u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-light-3 u-radius-50 u-text-palette-3-dark-1 u-white u-btn-3"> Выбрать</a>
+                  <a asp-page="/store/buyRole" asp-route-role="moder" class="u-active-palette-1-light-3 u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-light-3 u-radius-50 u-text-palette-3-dark-1 u-white u-btn-3"> Выбрать</a>
                 </div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-palette-1-light-2 u-radius-20 u-right-cell u-shape-round u-size-15-lg u-size-15-xl u-size-30-md u-size-30-sm u-size-60-xs u-layout-cell-4">
                 <div class="u-container-layout u-valign-top u-container-layout-4">
-                  <h5 class="u-text u-text-default u-text-palette-1-dark-1 u-text-16">Admin</h5>
-                  <h2 class="u-text u-text-default u-text-palette-1-dark-1 u-text-17">1299₽</h2>
+                  <h5 class="u-text u-text-default u-text-palette-1-dark-1 u-text-16">ADMIN</h5>
+                  <h2 class="u-text u-text-default u-text-palette-1-dark-1 u-text-17">@AccessChecker.ADMIN_COST ₽</h2>
                   <p class="u-text u-text-default u-text-palette-1-dark-1 u-text-18"> /МЕСЯЦ</p>
                   <div class="u-border-2 u-border-white u-line u-line-horizontal u-line-4"></div>
                   <p class="u-text u-text-palette-1-dark-2 u-text-19"> Есть общий чат<br>Есть поддержка<br>Есть базы данных<br>Администратор
                   </p>
-                  <a href="https://nicepage.com/static-site-generator" class="u-active-palette-1-light-3 u-btn u-btn-round u-button-style u-hover-palette-1-light-3 u-radius-50 u-text-palette-3-dark-1 u-white u-btn-4" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""> Выбрать</a>
+                  <a asp-page="/store/buyRole" asp-route-role="admin" class="u-active-palette-1-light-3 u-btn u-btn-round u-button-style u-hover-palette-1-light-3 u-radius-50 u-text-palette-3-dark-1 u-white u-btn-4" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""> Выбрать</a>
                 </div>
               </div>
             </div>
