renamed page, fixes

--- a/BlogPhone/Pages/store/buyRole.cshtml
+++ b/BlogPhone/Pages/store/buyRole.cshtml
@@ -45,6 +45,6 @@
 <form method="post" asp-antiforgery="true">
     <button style="color:green; padding:5%">Подтверждаю покупку</button>
 </form>
-<a asp-page="/rates" style="color:gray; margin:2%">Назад</a>
+<a asp-page="/goods" style="color:gray; margin:2%">Назад</a>
 
 <br /><hr />
