fixes, new features, config

--- a/BlogPhone/Pages/Office/User.cshtml
+++ b/BlogPhone/Pages/Office/User.cshtml
@@ -8,12 +8,13 @@
     <h1 style="text-align:center">Личный Кабинет (account id = @Model.SiteUser!.Id)</h1>
     <h3 style="text-align:center">Имя: @Model.SiteUser!.Name</h3>
     <h3 style="text-align:center; color:limegreen">Счёт: @Model.SiteUser!.Money рублей</h3>
-    <h3 style="text-align:center; color:gray">Статус: @Model.SiteUser!.Role</h3>
+    <h3 style="text-align:center; color:gray">Статус: @Model.SiteUser!.Role
     @if(@Model.SiteUser!.Role != "user")
     {
         DateTime dt = DateTime.Parse(Model.SiteUser.RoleValidityDate!);
-        <text> <h3 style="text-align:center; color:gray">Истекает: @dt.ToLocalTime()</h3> </text>
+        <text> (до: @dt.ToLocalTime())</text>
     }
+    </h3>
     <h3 style="text-align:center">Почта: @Model.SiteUser!.Email</h3>
     <h3 style="text-align:center">Пароль: @Model.SiteUser!.Password</h3>
 
