--- a/BlogPhone/Pages/admin/addArticle.cshtml
+++ b/BlogPhone/Pages/admin/addArticle.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model BlogPhone.Pages.AddArtModel
+@model BlogPhone.Pages.AddArticleModel
 @{
     ViewData["Title"] = "Добавить статью";
 }
