--- a/BlogPhone/Pages/admin/userBan.cshtml
+++ b/BlogPhone/Pages/admin/userBan.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id}"
-@model BlogPhone.Pages.admin.userBanModel
+@model BlogPhone.Pages.admin.BanUserModel
 @{
     ViewData["Title"] = "Забанить пользователя";
 }
