--- a/BlogPhone/Pages/admin/userChange.cshtml
+++ b/BlogPhone/Pages/admin/userChange.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id}"
-@model BlogPhone.Pages.admin.userChangeModel
+@model BlogPhone.Pages.admin.ChangeUserModel
 @{
     ViewData["Title"] = "Изменить пользователя";
     ViewBag.Email = @Model.AdminEmail;
