--- a/BlogPhone/Pages/store/buyRole.cshtml
+++ b/BlogPhone/Pages/store/buyRole.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{role}"
-@model BlogPhone.Pages.store.buyRoleModel
+@model BlogPhone.Pages.store.BuyRoleModel
 @{
     ViewData["Title"] = "Подтверждение покупки";
 }
