--- a/BlogPhone/Pages/Auth/Register.cshtml
+++ b/BlogPhone/Pages/Auth/Register.cshtml
@@ -31,7 +31,7 @@
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="Register.cshtml" data-home-page-title="Register" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-3687"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a asp-page="index" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
+        <a asp-page="/index" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
           <img src="~/images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
