--- a/BlogPhone/Pages/aboutUs.cshtml
+++ b/BlogPhone/Pages/aboutUs.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model BlogPhone.Pages.Auth.LoginModel
+@model BlogPhone.Pages.AboutUsModel
 @{
     Layout = null;
 }
@@ -9,26 +9,27 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="About Us, About Us">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Вход</title>
+    <title>О нас</title>
     <link rel="stylesheet" href="~/css/nicepage.css" media="screen">
-    <link rel="stylesheet" href="~/css/login.css" media="screen">
+    <link rel="stylesheet" href="~/css/AboutUs.css" media="screen">
     <script class="u-script" type="text/javascript" src="~/js/jquery.js" defer=""></script>
-    @*<script class="u-script" type="text/javascript" src="~/js/nicepage.js" defer=""></script>*@
+    <script class="u-script" type="text/javascript" src="~/js/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 4.10.5, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    
     
     
     <script type="application/ld+json">{
 		"@@context": "http://schema.org",
 		"@@type": "Organization",
-		"name": "AdminPanel_NPD",
+		"name": "",
 		"logo": "images/default-logo.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Вход">
+    <meta property="og:title" content="О нас">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-3687"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
@@ -47,10 +48,20 @@
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;" asp-page="/index">Главное</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;" asp-page="/goods">Тарифы</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;" asp-page="/aboutUs">О нас</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;" asp-page="/auth/login">Вход</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" asp-page="/auth/register">Регистрация</a>
-</li></ul>
-</div>
-</li></ul>
+</li>
+
+@if(Model.IsAuthorize)
+{
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/office/user">@Model.SiteUser!.Email</a></li>
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/logout">Выход</a></li> 
+}
+else
+{
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/login">Вход</a></li>
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/register">Регистрация</a></li>   
+}
+
+</ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
@@ -69,43 +80,50 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-section-1" id="carousel_ba27">
+    <section class="u-clearfix u-section-1" id="sec-5f19">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-spacing-vertical u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
+            <div class="u-layout-row">
+              <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-40 u-layout-cell-1">
+                <div class="u-container-layout u-valign-middle u-container-layout-1">
+                  <h2 class="u-text u-text-default u-text-1">About Us</h2>
+                  <p class="u-text u-text-2">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex. Suspendisse rhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi nunc, et molestie ipsum iaculis sit amet.</p>
+                </div>
+              </div>
+              <div class="u-container-style u-image u-layout-cell u-right-cell u-size-20 u-image-1" src="" data-image-width="256" data-image-height="256">
+                <div class="u-container-layout u-container-layout-2"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="u-clearfix u-section-2" id="sec-5f39">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-expanded-width-lg u-expanded-width-sm u-expanded-width-xs u-shape u-shape-svg u-text-palette-3-light-1 u-shape-1">
-          <svg class="u-svg-link" preserveAspectRatio="none" viewBox="0 0 160 150" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1073"></use></svg>
-          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 160 150" x="0px" y="0px" id="svg-1073"><path d="M43.2,126.9c14.2,1.3,27.6,7,39.1,15.6c8.3,6.1,19.4,10.3,32.7,5.3c11.7-4.4,18.6-17.4,21-30.2c2.6-13.3,8.1-25.9,15.7-37.1
-	c8.3-12.1,10.8-27.9,5.3-42.7C150.5,20.3,134.6,9,117,7.6C107.9,6.9,98.8,5,90.1,1.9C83-0.6,75-0.7,67.4,2.1
-	c-9.9,3.7-17,11.6-20.1,21c-3.3,10.1-10.9,18-20.6,22.2c-0.1,0-0.1,0.1-0.2,0.1c-20.3,8.9-31,32-24.6,53.2
-	C6.9,115.6,25.2,125.2,43.2,126.9z"></path></svg>
-        </div>
-        <div >
-            <img src="~/images/logcat.jpg" class="u-align-left u-image u-image-circle u-preserve-proportions u-image-1" data-image-width="616" data-image-height="616" />
-        </div>
-        <div class="u-palette-3-base u-shape u-shape-circle u-shape-2"></div>
-        <div class="u-form u-radius-10 u-white u-form-1">
-          <form method="post" asp-antiforgery="true" class="u-clearfix u-form-spacing-15 u-form-vertical u-inner-form" source="email" name="form" style="padding: 28px;">
-            <div class="u-form-group u-form-name">
-              <label for="UserName" asp-for="UserName" class="u-label">Имя</label>
-              <input type="text" placeholder="Введите ваше имя" asp-for="UserName" autocomplete="on" id="UserName" name="UserName" class="u-border-2 u-border-palette-3-dark-1 u-input u-input-rectangle u-palette-3-light-1 u-radius-10" required="" maxlength="20">
+        <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
+            <div class="u-layout-row">
+              <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-23 u-layout-cell-1">
+                <div class="u-container-layout u-valign-middle u-container-layout-1">
+                  <div alt="" class="u-image u-image-circle u-image-1" src="" data-image-width="256" data-image-height="256"></div>
+                </div>
+              </div>
+              <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-37 u-layout-cell-2">
+                <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-container-layout-2">
+                  <h2 class="u-text u-text-default u-text-1">About Us</h2>
+                  <p class="u-text u-text-2">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex. Suspendisse rhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi nunc, et molestie ipsum iaculis sit amet.</p>
+                  <a href="" class="u-btn u-button-style u-btn-1">Button</a>
+                </div>
+              </div>
             </div>
-            <div class="u-form-email u-form-group">
-              <label for="UserPassword" asp-for="UserPassword" class="u-label">Пароль</label>
-              <input type="password" placeholder="Введите ваш пароль" asp-for="UserPassword" autocomplete="on" id="UserPassword" name="UserPassword" class="u-border-2 u-border-palette-3-dark-1 u-input u-input-rectangle u-palette-3-light-1 u-radius-10" required="" maxlength="20">
-            </div>
-            <div class="u-form-agree u-form-group u-form-group-3">
-              <input type="checkbox" id="UserSaveMe" name="UserSaveMe" asp-for="UserSaveMe" class="u-agree-checkbox">
-              <label for="UserSaveMe" asp-for="UserSaveMe" class="u-label">Запомнить меня</label>
-            </div>
-            <div class="u-align-right u-form-group u-form-submit">
-              <button type="submit" class="u-active-palette-3-dark-3 u-border-2 u-border-active-palette-3-dark-3 u-border-hover-palette-3-dark-2 u-border-palette-3-dark-1 u-btn u-btn-round u-btn-submit u-button-style u-hover-palette-3-dark-2 u-palette-3-light-1 u-radius-10 u-btn-1">Войти</button>
-            </div>
-          </form>
+          </div>
         </div>
-        <a class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-3-dark-2 u-btn u-button-style u-none u-text-palette-3-dark-1 u-btn-2" asp-page="/auth/register">Зарегистрироваться</a>
-        </div>
+      </div>
     </section>
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-9799"><div class="u-clearfix u-sheet u-sheet-1">
+    
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-83d7"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">copyright 2022</p>
       </div></footer>
   </body>
