--- a/BlogPhone/Pages/AboutUs.cshtml
+++ b/BlogPhone/Pages/AboutUs.cshtml
@@ -52,25 +52,14 @@
 
 @if(Model.IsAuthorize)
 {
-    <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;" asp-page="/office/user">@Model.SiteUser!.Email</a>
-        <div class="u-nav-popup">
-            <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" asp-page="/auth/logout">Выход</a></li>
-            </ul>
-        </div>
-    </li>   
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/office/user">@Model.SiteUser!.Email</a></li>
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/logout">Выход</a></li> 
 }
 else
 {
-    <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;" asp-page="/auth/login">Вход</a>
-        <div class="u-nav-popup">
-            <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" asp-page="/auth/register">Регистрация</a></li>
-            </ul>
-        </div>
-    </li>   
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/login">Вход</a></li>
+    <li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/register">Регистрация</a></li>   
 }
-
 
 </ul>
           </div>
