--- a/BlogPhone/Pages/Shared/_Layout.cshtml
+++ b/BlogPhone/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px; color:red" asp-page="/admin/panel">Панель</a>
 </li>
 
-    <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;" asp-page="/office/user">@ViewBag.Email</a>
+    <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;" asp-page="/office/user">@ViewData["email"]</a>
         <div class="u-nav-popup">
             <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2">
                 <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" asp-page="/auth/logout">Выход</a></li>
@@ -50,6 +50,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/goods">Тарифы</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/aboutUs">О нас</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/admin/panel">Панель</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/office/user">@ViewData["email"]</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" asp-page="/auth/logout">Выход</a>
 </li></ul>
               </div>
