--- a/BlogPhone/Pages/admin/userChange.cshtml
+++ b/BlogPhone/Pages/admin/userChange.cshtml
@@ -2,7 +2,6 @@
 @model BlogPhone.Pages.admin.ChangeUserModel
 @{
     ViewData["Title"] = "Изменить пользователя";
-    ViewBag.Email = @Model.AdminEmail;
 }
 
 <h1>Изменение личного кабинета пользователя</h1>
@@ -10,28 +9,32 @@
 
 <form method="post" asp-antiforgery="true">
     <label>ID</label>
-    <input disabled type="number" style="margin:5px" value="@Model.SiteUser!.Id" />
+    <input disabled type="number" style="margin:5px" value="@Model.ChangeUser!.Id" />
     <br />
 
     <label>Name</label>
-    <input type="text" style="margin:5px" required name="name" value="@Model.SiteUser!.Name" />
+    <input type="text" style="margin:5px" required name="name" value="@Model.ChangeUser!.Name" />
     <br />
 
     <label>Password</label>
-    <input type="text" style="margin:5px" required name="password" value="@Model.SiteUser!.Password" />
+    <input type="text" style="margin:5px" required name="password" value="@Model.ChangeUser!.Password" />
     <br />
 
     <label>Email</label>
-    <input type="email" style="margin:5px" required name="email" value="@Model.SiteUser!.Email" />
+    <input type="email" style="margin:5px" required name="email" value="@Model.ChangeUser!.Email" />
     <br />
 
     <label>Money</label>
-    <input type="number" style="margin:5px" required name="money" value="@Model.SiteUser!.Money" />
+    <input type="number" style="margin:5px" required name="money" value="@Model.ChangeUser!.Money" />
+    <br />
+
+    <label>Add Role Days</label>
+    <input type="number" style="margin:5px" required name="roleAddDays" value="0" />
     <br />
 
     <label>Role</label>
     <select style="margin:5px" name="role" required>
-        @if (@Model.SiteUser!.Role == "user") 
+        @if (@Model.ChangeUser!.Role == "user") 
         { 
             <option selected value="user">user</option> 
         }
@@ -39,7 +42,7 @@
         { 
             <option value="user">user</option> 
         }
-        @if (@Model.SiteUser!.Role == "standart") 
+        @if (@Model.ChangeUser!.Role == "standart") 
         { 
             <option selected value="standart">standart</option> 
         }
@@ -47,7 +50,7 @@
         { 
             <option value="standart">standart</option> 
         }
-        @if (@Model.SiteUser!.Role == "moder") 
+        @if (@Model.ChangeUser!.Role == "moder") 
         { 
             <option selected value="moder">moder</option> 
         }
@@ -55,7 +58,7 @@
         { 
             <option value="moder">moder</option> 
         }
-        @if (@Model.SiteUser!.Role == "admin") 
+        @if (@Model.ChangeUser!.Role == "admin") 
         { 
             <option selected value="admin">admin</option> 
         }
@@ -66,7 +69,7 @@
     </select>
     <br />
 
-   @if(!@AccessChecker.BanCheck(@Model.SiteUser!.BanDate))
+   @if(!@AccessChecker.BanCheck(@Model.ChangeUser!.BanDate))
     {
         <p>
             <a asp-page="userChange" asp-page-handler="Unban" style="color:indianred">Разблокировать аккаунт</a>
